@@ -1,4 +1,4 @@
-version = "0.9"
+version = "0.9.1"
 
 if __name__ == "__main__":
     print version
